# LZW

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: defaults.cmake
src/: CMakeLists.txt  lzw.c  lzw.h  main.c  standard.c  standard.h
